[metadata]
name = asdf_transform_schemas
provides = asdf_transform_schemas
package_name = asdf_transform_schemas
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = ASDF schemas for transforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacetelescope/asdf-transform-schemas
github_project = spacetelescope/asdf-transform-schemas

[options]
python_requires = >=3.6
setup_requires =
    setuptools
    setuptools_scm

[options.package_data]
* = *.yaml

[options.entry_points]
asdf_extensions =
    asdf_transform_schemas = asdf_transform_schemas.extension:AsdfTransformSchemasExtension
