[metadata]
name = asdf_transform_schemas
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = ASDF schemas for transforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacetelescope/asdf-transform-schemas

[options]
python_requires = >=3.6
setup_requires =
    setuptools
    setuptools_scm
    setuptools_asdf
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[generate_asdf_schema_extension]
package = asdf_transform_schemas
